Fixed option checkboxes shrinking in Safari on Mac/iPad when a long label is wrapping next to it

--- a/options.css
+++ b/options.css
@@ -67,6 +67,7 @@ select {
 
 input[type=checkbox] {
   margin-left: 12px;
+  flex-shrink: 0;
 }
 
 section.group > label:not(.checkbox) {
